# valkyrie

./: .gitignore  README.md
common/: Cargo.toml
common/src/: cond_stmt_base.rs  config.rs  defs.rs  lib.rs  log_data.rs  shm.rs
docs/: todo.md
fuzzer/: Cargo.toml
fuzzer/src/: branches.rs  command.rs  fuzz_loop.rs  fuzz_main.rs  fuzz_type.rs
fuzzer/src/cond_stmt/: cond_id.rs  cond_state.rs  cond_stmt.rs  mod.rs  output.rs  shm_conds.rs
fuzzer/src/depot/: depot.rs  dump.rs  qpriority.rs  sync.rs
fuzzer/src/executor/: executor.rs  forksrv.rs  limit.rs  mod.rs
fuzzer/src/mut_input/: mod.rs  mut_input.rs  offsets.rs  rw.rs  sign.rs
fuzzer/src/search/: afl.rs  cmpfn.rs  det.rs  exploit.rs  gd.rs  grad.rs  handler.rs  interesting_val.rs  len.rs  mod.rs  newgd.rs  one_byte.rs  random.rs
fuzzer/src/stats/: bunny.rs  chart.rs  entry.rs  fuzz.rs  search.rs
fuzzer/src/track/: filter.rs
llvm_mode/: CMakeLists.txt
llvm_mode/compiler/: CMakeLists.txt  angora_clang.c
llvm_mode/external_lib/: io_func.c
llvm_mode/include/: abilist.h  alloc_inl.h  defs.h  util.h
llvm_mode/libcxx/: compile.sh
llvm_mode/pass/: AngoraPass.cc  CMakeLists.txt  CtorDtorFuncs.hpp  DFSanPass.cc  RemoveSelectPass.cc  UnfoldBranchPass.cc
llvm_mode/rules/: angora_abilist.txt  exploitation_list.txt
pin_mode/: pin_stub.c
runtime/src/: track.rs
runtime_fast/: Cargo.toml
runtime_fast/src/: context.c  fast.rs  shm_branches.rs  shm_conds.rs
tests/: .gitignore  test.sh  test_bc.sh
tests/AAH001/: AAH001.c
tests/AAH005/: AAH005.c
tests/array/: array.c
tests/atoi/: atoi.c
(+26 files in other folders)
