[package]
name = "angora"
version = "1.2.2"
authors = ["spinpx <spinpx@gmail.com>"]
edition = "2018"

[features]
unstable = []

[dependencies]
clap = "2.32"
log = "0.4"
pretty_env_logger = "0.4"
rand = "0.7"
libc = "0.2"
wait-timeout = "0.2"
ctrlc = { version = "3.1", features = ["termination"] }
byteorder = "1.2"
chrono = "0.4"
priority-queue = "1.0"
num_cpus = "1.0"
derive_more = "0.99"
colored = "2.0"
serde="1.0"
serde_derive = "1.0"
serde_json = "1.0"
lazy_static = "1.1"
memmap = "0.7.0"
twoway = "0.2.0"
sha2 = "0.9.3"
parse_int = "0.5.0"
csv="1.1.6"

angora_common = {path = "../common" }
runtime = {path = "../runtime" }

[dev-dependencies]
